[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "comfyui-nkd-basic-tools"
version = "1.1.0"
description = "Transversal utility nodes for ComfyUI: inpaint crop & stitch, and more to come."
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = "https://github.com/Nekodificador/ComfyUI-NKD-Basic-Tools"

[tool.comfy]
PublisherId = "nekodificador"
DisplayName = "NKD Basic Tools"
